# resume

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  app.py  gen_static.py  luisfernandobarrera.resume.json  pyproject.toml  requirements.txt  run.sh  test_pdf_pages.py
.github/workflows/: python-app.yml
docs/: CNAME  index.html  print-cv.html  print-resume-projects.html  print-resume.html  print.html  resume.json  style-print.css  style-screen.css  style.css
docs/resume/: index.html
templates/: cv.html  cv_screen.html  resume.html  resume_ats.html  resume_with_projects.html  template.html
templates/sass/: _variables.sass  style-print.sass  style-screen.sass  style.sass
