[tool.poetry]
name = "resume"
version = "0.1.0"
description = "Luis Fernando Barrera's personal resumé system"
authors = ["Luis Fernando Barrera <luisfernando@informind.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
libsass = "^0.23.0"
frozen-flask = "^1.0.2"
flask-weasyprint = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
