[project]
name = "resume"
version = "0.2.0"
description = "Luis Fernando Barrera's personal resumé system"
authors = [
    {name = "Luis Fernando Barrera", email = "luisfernando@informind.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "flask>=3.0.3",
    "libsass>=0.23.0",
    "frozen-flask>=1.0.2",
    "flask-weasyprint>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]
